tests/fixtures/invalid/pow_float_none_none.py
# Cannot call pow() with Float, None, None
x = pow(1.0, None, None)
